--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Dependencies
 node_modules/
+.pnpm-store/
 pnpm-lock.yaml
 
 # Build outputs
 dist/
 build/
+lib/
+*.tsbuildinfo
 
 # Development files
 .DS_Store
@@ -12,12 +15,93 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# Dependency directories
+jspm_packages/
+
+# Snowpack dependency directory (https://snowpack.dev/)
+web_modules/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+
+# Gatsby files
+.cache/
+public
+
+# Vite build cache
+.vite
+
+# Rollup cache
+.rollup.cache
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
 
 # IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # Environment variables
 .env
@@ -26,8 +110,31 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# Testing
-coverage/
-
 # Storybook build outputs
 storybook-static/
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
+# Temporary folders
+tmp/
+temp/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Runtime logs
+logs
+*.log
+
+# Lock files (uncomment if you want to ignore lock files)
+# package-lock.json
+# yarn.lock
