--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
+    "test:e2e": "playwright test",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -41,6 +42,7 @@
     "react-dom": "^18.3.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
     "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
     "@storybook/addon-links": "^8.3.6",
@@ -53,6 +55,7 @@
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.12.0",
     "eslint-config-agent": "^1.4.3",
+    "playwright": "^1.55.1",
     "storybook": "^8.3.6",
     "typescript": "^5.6.3",
     "vite": "^5.4.8",
