--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "packageManager": "pnpm@9.12.1",
   "dependencies": {
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1"
   }
 }
