--- a/package.json
+++ b/package.json
@@ -50,11 +50,14 @@
     "@storybook/react": "^8.3.6",
     "@storybook/react-vite": "^8.3.6",
     "@storybook/test": "^8.3.6",
+    "@testing-library/jest-dom": "^6.9.0",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.12.0",
     "eslint-config-agent": "^1.4.6",
+    "jsdom": "^27.0.0",
     "playwright": "^1.55.1",
     "storybook": "^8.3.6",
     "typescript": "^5.6.3",
