Add visual tests for Button and BooleanAnswer components; update Playwright configuration

--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:e2e": "playwright test",
+    "test:visual": "playwright test --project=chromium-visual",
+    "test:visual:update": "playwright test --project=chromium-visual --update-snapshots",
+    "test:visual:ui": "playwright test --project=chromium-visual --ui",
+    "test:visual:button": "playwright test --project=chromium-visual src/components/Button/tests/visual/Button.spec.ts",
+    "test:visual:button:update": "playwright test --project=chromium-visual src/components/Button/tests/visual/Button.spec.ts --update-snapshots",
+    "test:visual:booleananswer": "playwright test --project=chromium-visual src/components/BooleanAnswer/tests/visual/BooleanAnswer.spec.ts",
+    "test:visual:booleananswer:update": "playwright test --project=chromium-visual src/components/BooleanAnswer/tests/visual/BooleanAnswer.spec.ts --update-snapshots",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -58,7 +65,10 @@
     "eslint": "^9.12.0",
     "eslint-config-agent": "^1.4.6",
     "jsdom": "^27.0.0",
+    "pixelmatch": "^7.1.0",
     "playwright": "^1.55.1",
+    "playwright-testing-library": "^4.5.0",
+    "sharp": "^0.34.4",
     "storybook": "^8.3.6",
     "typescript": "^5.6.3",
     "vite": "^5.4.8",
