Update visual test command to run snapshot updates for all components

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:ui": "vitest --ui",
     "test:e2e": "playwright test",
     "test:visual": "playwright test --project=chromium-visual",
-    "test:visual:update": "playwright test --project=chromium-visual src/components/**/tests/visual/*.spec.ts --update-snapshots",
+    "test:visual:update": "playwright test --project=chromium-visual --update-snapshots",
     "test:visual:ui": "playwright test --project=chromium-visual --ui",
     "test:visual:button": "playwright test --project=chromium-visual src/components/Button/tests/visual/Button.spec.ts",
     "test:visual:button:update": "playwright test --project=chromium-visual src/components/Button/tests/visual/Button.spec.ts --update-snapshots",
