--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "declaration": true,
-    "declarationMap": true,
+    "declarationMap": false,
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
@@ -23,5 +23,5 @@
     }
   },
   "include": ["src"],
-  "exclude": ["dist", "node_modules", "**/*.stories.*", "**/*.test.*"]
+  "exclude": ["dist", "node_modules", "**/*.stories.*", "**/*.test.*", "**/*.spec.*", "**/tests/**/*", "**/test/**/*"]
 }
