--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "test:visual:update": "playwright test --project=chromium-visual --update-snapshots",
     "test:visual:ui": "playwright test --project=chromium-visual --ui",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "release": "release-it",
+    "release:dry": "release-it --dry-run",
+    "release:patch": "release-it patch",
+    "release:minor": "release-it minor",
+    "release:major": "release-it major"
   },
   "keywords": [
     "ui",
@@ -46,6 +51,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
+    "@release-it/conventional-changelog": "^10.0.1",
     "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
     "@storybook/addon-links": "^8.3.6",
@@ -64,6 +70,7 @@
     "pixelmatch": "^7.1.0",
     "playwright": "^1.55.1",
     "playwright-testing-library": "^4.5.0",
+    "release-it": "^19.0.5",
     "sharp": "^0.34.4",
     "storybook": "^8.3.6",
     "typescript": "^5.6.3",
