Update test script to include run flag for Vitest

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "typecheck": "tsc --noEmit",
-    "test": "vitest",
+    "test": "vitest --run",
     "test:ui": "vitest --ui",
     "test:e2e": "playwright test",
     "test:visual": "playwright test --project=chromium-visual",
