chore: change package name to lumina-ui-lib

--- a/.release-it.json
+++ b/.release-it.json
@@ -7,8 +7,7 @@
     "tagAnnotation": "Release v${version}"
   },
   "npm": {
-    "publish": true,
-    "publishArgs": ["--access", "public"]
+    "publish": true
   },
   "github": {
     "release": true,
