--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lumina-ui",
+  "name": "lumina-ui-lib",
   "version": "0.1.0",
   "description": "UI component library for the Lumina project",
   "type": "module",
