--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.12.0",
     "eslint-config-agent": "^1.4.6",
+    "eslint-plugin-ddd": "^0.2.0",
     "husky": "^9.1.7",
     "jsdom": "^27.0.0",
     "lint-staged": "^16.2.3",
